--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="buttons" style="margin-bottom: 8px;">
-            <a class="btn text-light" role="button" href="">
+            <a class="btn text-light" role="button" href="https://arxiv.org/abs/2211.10658">
                 <svg style="width:24px;height:24px;margin-left:-12px;margin-right:12px" viewBox="0 0 24 24">
                     <path fill="white" d="M16 0H8C6.9 0 6 .9 6 2V18C6 19.1 6.9 20 8 20H20C21.1 20 22 19.1 22 18V6L16 0M20 18H8V2H15V7H20V18M4 4V22H20V24H4C2.9 24 2 23.1 2 22V4H4M10 10V12H18V10H10M10 14V16H15V14H10Z"></path>
                 </svg>Paper
@@ -190,6 +190,12 @@
                     <h6 class="caption">Pictured: 100 noncurated dance samples from EDGE conditioned on unseen music.</h6>
                 </div>
             </div>
+        </div>
+    </div>
+    <div style="background-color: rgb(60, 60, 60);">
+        <div class="container text-light" style="padding-top: 30px; padding-bottom: 30px; text-align:center;">
+            <h2><strong>EDGE generates choreographies from music</strong></h2>
+            <p>EDGE uses music embeddings from the powerful Jukebox model to gain a broad understanding of music and create high-quality dances even for in-the-wild music samples. (Unmute for music)</p>
         </div>
     </div>
     <!-- Big grid -->
@@ -233,8 +239,7 @@
     </div>
     <div style="background-color: rgb(60, 60, 60);">
         <div class="container text-light" style="padding-top: 30px; padding-bottom: 30px; text-align:center;">
-            <h2><strong>EDGE generates choreographies from music</strong></h2>
-            <p>EDGE uses music embeddings from the powerful Jukebox model to gain a broad understanding of music and create high-quality dances even for in-the-wild music samples.</p>
+            <h2><strong>The EDGE Model, Explained</strong></h2>
         </div>
     </div>
     <div style="background-color: rgb(255, 255, 255);">
